Fix filter not showing in Firefox.

--- a/patterns/02-molecules/box/box-image-duotone/box-image-duotone.css
+++ b/patterns/02-molecules/box/box-image-duotone/box-image-duotone.css
@@ -14,7 +14,9 @@
 
 
 .duotone-filters{
-    display: none;
+    visibility: hidden;
+    height: 0;
+    display: block;
 }
 
 .box-image-duotone{
